<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_now_playing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.beatit.NowPlayingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/now_playing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <TextView
        android:text="@string/now_playing_purpose"
        style="@style/PurposeText" />

    <info.abdolahi.CircularMusicProgressBar
        android:id="@+id/circular_cover"
        android:layout_width="@dimen/circularDimen"
        android:layout_height="@dimen/circularDimen"
        android:layout_gravity="center"
        android:layout_margin="@dimen/smallPadding"
        app:border_color="@color/hintLightText"
        app:border_width="@dimen/circularBorder"
        app:centercircle_diammterer="1"
        app:draw_anticlockwise="false"
        app:progress_color="@color/colorAccent"
        app:progress_startAngle="270" />

    <TextView
        android:id="@+id/title"
        style="@style/TitleText"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/artist"
        style="@style/ArtistText"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/repeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/repeat"
            android:padding="@dimen/smallPadding"
            android:src="@drawable/ic_repeat" />

        <ImageView
            android:id="@+id/previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/previous"
            android:padding="@dimen/smallPadding"
            android:src="@drawable/previous_selector" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/play_pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/smallPadding"
            android:src="@drawable/ic_play_arrow_white_24px" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/next"
            android:padding="@dimen/smallPadding"
            android:src="@drawable/next_selector" />

        <ImageView
            android:id="@+id/shuffle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/shuffle"
            android:padding="@dimen/smallPadding"
            android:src="@drawable/ic_shuffle" />

    </LinearLayout>

</LinearLayout>
